@@ -40,6 +40,11 @@ Post-v3.3.0
      allows samples to be emitted locally (instead of via IPFIX) in a
      datapath-specific manner.  The Linux kernel datapath is the first to
      support this feature by using the new datapath "psample" action.
+   - OVSDB:
+     * A new configuration knob "other_config:explicit-sampled-drops" in the
+       Open_vSwitch table controls whether an explicit drop action shall be
+       added at the end of datapath flows whose last action is an
+       observability-driven sample action.
 
 
 v3.3.0 - 16 Feb 2024
